force-app/main/default/objects/Leave__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Type a short note for leave</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>