force-app/main/default/objects/Leave__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>The different types of leaves that are include earned leaves, casual leaves and sick leaves</description>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL(Casual leave)</fullName>
            </value>
            <value>
                <fullName>HL(Half-day leave)</fullName>
            </value>
            <value>
                <fullName>OL(one-day leave)</fullName>
            </value>
            <value>
                <fullName>SL/ML(Sick leave/Medical leave)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>